feat(home): add home page with products
closes: https://github.com/Bil0/ultra-frontend-test/issues/1

--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,11 @@
               "src/favicon.ico",
               "src/assets",
               {
+                "glob": "*.json",
+                "input": "./src/app/testing/mocks/",
+                "output": "api/"
+              },
+              {
                 "glob": "svg-sprite-*.svg",
                 "input": "./node_modules/material-design-icons/sprites/svg-sprite/",
                 "output": "mat-icons/"
