--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
     "@ngrx/effects": "^15.0.0",
+    "@ngrx/entity": "^15.0.0",
     "@ngrx/store": "^15.0.0",
     "@ngrx/store-devtools": "^15.0.0",
-    "material-design-icons": "^3.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -33,11 +33,13 @@
     "@angular/cli": "~15.0.3",
     "@angular/compiler-cli": "^15.0.0",
     "@types/jest": "^29.2.4",
+    "@types/lodash": "^4.14.191",
     "jasmine-marbles": "^0.9.2",
     "jest": "^28.0.0",
     "jest-create-mock-instance": "^2.0.0",
     "jest-junit-reporter": "^1.1.0",
     "jest-preset-angular": "^12.2.3",
+    "lodash": "^4.17.21",
     "typescript": "~4.8.2"
   }
 }
