--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:prod": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
-    "test": "jest"
+    "test": "jest",
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
@@ -35,6 +37,7 @@
     "@angular/compiler-cli": "^15.0.4",
     "@types/jest": "^29.2.4",
     "@types/lodash": "^4.14.191",
+    "angular-cli-ghpages": "^1.0.5",
     "jasmine-marbles": "^0.9.2",
     "jest": "^28.0.0",
     "jest-create-mock-instance": "^2.0.0",
