--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "jest"
+    "test": "jest",
+    "lint": "ng lint",
+    "build:prod": "ng build --configuration production"
   },
   "private": true,
   "dependencies": {
@@ -31,16 +33,29 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.0.4",
+    "@angular-eslint/builder": "^15.1.0",
+    "@angular-eslint/eslint-plugin": "^15.1.0",
+    "@angular-eslint/eslint-plugin-template": "^15.1.0",
+    "@angular-eslint/schematics": "^15.1.0",
+    "@angular-eslint/template-parser": "^15.1.0",
     "@angular/cli": "~15.0.4",
     "@angular/compiler-cli": "^15.0.4",
+    "@ngrx/eslint-plugin": "^15.1.0",
     "@types/jest": "^29.2.4",
     "@types/lodash": "^4.14.191",
+    "@typescript-eslint/eslint-plugin": "^5.47.0",
+    "@typescript-eslint/parser": "^5.47.0",
+    "eslint": "^8.30.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "jasmine-marbles": "^0.9.2",
     "jest": "^28.0.0",
     "jest-create-mock-instance": "^2.0.0",
     "jest-junit-reporter": "^1.1.0",
     "jest-preset-angular": "^12.2.3",
     "lodash": "^4.17.21",
+    "prettier": "^2.8.1",
+    "prettier-eslint": "^15.0.1",
     "typescript": "~4.8.2"
   }
 }
